added a delete method

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,14 @@
 <body>
     <h1>Add Smoothie</h1>
     <form action="/addSmoothie" method="POST">
-        <input type="text" placeholder="Liquid" name="liquid">Liquid
-        <input type="text" placeholder="Protein" name="protein">Protein
-        <input type="text" placeholder="Fruit" name="fruit">Fruit
-        <input type="text" placeholder="Spread" name="spread">Spread
-        <input type="text" placeholder="Carbs" name="carbs">Carbohydrates
-        <input type="text" placeholder="Fats" name="fats">Fats
-        <input type="text" placeholder="Extras" name="extra">Extra
+        <input type="text" placeholder="Name of Smoothie" name="name">
+        <input type="text" placeholder="Liquid" name="liquid">
+        <input type="text" placeholder="Protein" name="protein">
+        <input type="text" placeholder="Fruit" name="fruit">
+        <input type="text" placeholder="Spread" name="spread">
+        <input type="text" placeholder="Carbs" name="carbs">
+        <input type="text" placeholder="Fats" name="fats">
+        <input type="text" placeholder="Extras" name="extra">
         <input type="submit">
     </form>
 
